--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -11,10 +11,7 @@ jobs:
       matrix:
         operating-system: [ubuntu-latest]
         php: ['7.4', '8.1']
-        matomo: ['4.0.0', '4.11.0']
-        exclude:
-          - php: 8.1
-            matomo: 4.0.0
+        matomo: ['5.x-dev']
     runs-on: ${{ matrix.operating-system }}
     services:
       db:
